@@ -1,3 +1,8 @@
+2009-01-25  Russ Allbery  <rra@stanford.edu>
+
+	* lib/Pod/Thread.pm (cmd_item): Don't treat =item 0 as a bullet.
+	Also improve the coding style.
+
 2008-11-12  Russ Allbery  <rra@stanford.edu>
 
 	* VERSION: Pod::Thread 0.11 released.
